[workspace]
members = [
    ".",
    "sql_builder_macros"
]

[package]
name = "sql_builder_test"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_builder_macros = { version = "0.1.0", path = "sql_builder_macros" }
