[package]
name = "sql_builder_macros"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.16", features = [ "full" ] }
quote = { version = "1.0.4", default-features = false }
proc-macro2 = { version = "1.0.9", default-features = false }
proc-macro-hack = "0.5"
